[tool.poetry]
name = "fuzzing-stands"
version = "0.1.0"
description = ""
authors = ["Sergey <resh.sersh@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
docker = "^4.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
